manifests/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deploy
  labels:
    name: worker-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
    spec:
      containers:
      - name: worker-app
        image: anshu049/worker
