manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379        
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-pod
